# nodecount

./: .gitignore  CMakeLists.txt  README.md
lib/skill.cpp.common/: CMakeLists.txt  skill_cpp_common.cbp
lib/skill.cpp.common/skill/streams/: FileOutputStream.h
src/: main.cpp
src/empty/: File.cpp  File.h  StringKeeper.h
